--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="./src/imagens/card-wolverine.jpg" alt="Personagem Wolverine">
                 </li>
 
-                <li class="personagem" id="lince-Negra" data-name="Lince Negra" data-description="Ela tem o poder de atravessar matéria sólida,campos de energia,rajadas ópticas, continuando intacta,e também tem o poder de andar no ar">
+                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="Ela tem o poder de atravessar matéria sólida,campos de energia,rajadas ópticas, continuando intacta,e também tem o poder de andar no ar">
                     <img src="./src/imagens/card-lince-negra.jpg" alt="Personagem Lince Negra">
                 </li>
 
